js/src/tests/test262/built-ins/NativeErrors/SyntaxError/prototype.js
assert
.
sameValue
(
SyntaxError
.
prototype
Object
.
getPrototypeOf
(
new
SyntaxError
)
)
;
verifyProperty
(
SyntaxError
"
prototype
"
{
writable
:
false
enumerable
:
false
configurable
:
false
}
)
;
reportCompare
(
0
0
)
;
